Fix overlay covering extra space on enigma cards

--- a/wp-content/themes/chassesautresor/assets/scss/_cartes.scss
+++ b/wp-content/themes/chassesautresor/assets/scss/_cartes.scss
@@ -105,7 +105,7 @@
   height: 180px;
   overflow: hidden;
   position: relative;
-  flex: 2;
+  flex: 0 0 180px;
 }
 
 .carte-enigme-image .badge-cout {
